Fix: works description more than 40 will be truncate

--- a/style/main.css
+++ b/style/main.css
@@ -391,6 +391,12 @@ h1 {
 .card-overlay h3 {
   margin: 0;
   font-size: 17px;
+  line-height: 1.35;
+  min-height: 2.7em;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .card-overlay p {
